# cv

./: Relatório CV.docx  index.html  puzzles.json  winning.m4a
css/: style.css
js/: listeners.js  maths.js  moves.js
js/cv/: CanvasWebGl.class.js  Models.class.js  Puzzle.js  PuzzleGame.js  initShaders.js  lightSources.js  models.js  piece.js  puzzle.js  puzzle_definition.js  puzzle_game.js  puzzle_level.js  runWebGL.js  utils.js
models/: prisma.txt
pieces/: tetraedro.txt
projeto1/js/cv/: lightSources.js  piece.js  puzzle.js  runWebGL.js
projeto1/puzzles/: puzzle1.json  puzzle2.json
projeto2/: CMakeLists.txt  main.cpp
projeto2/Debug/: projeto2
puzzles/: puzzle1.json  puzzle2.json  puzzle3.json
